[package]
name = "transaction-buffer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
tokio = { version = "1", features = ["full"] }
transaction-consumer = { git = "https://github.com/oline-tramp/transaction-consumer" }
anyhow = "1.0.38"
chrono = { version = "*" }
log = { version = "0.4", features = ["std", "serde"] }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }
ton_block = { git = "https://github.com/broxus/ton-labs-block.git" }
futures = { version = "0.3" }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "offline", "chrono", "json"] }
nekoton-abi = { git = "https://github.com/broxus/nekoton.git" }
ton_abi = { git = "https://github.com/broxus/ton-labs-abi.git" }

[dev-dependencies]
env_logger = "0.10.0"
env-file-reader = "0.3.0"

